[metadata]
name = psycopg2-pool
version = 1.0
author = Changaco
author-email = changaco@changaco.oy.lc
home-page = https://github.com/Changaco/psycopg2-pool
description = Proper pooling of psycopg2 connections
long-description = file: README.md
long-description-content-type = text/markdown
license = LGPL3
license-file = LICENSE
platform = any
keywords = postgres psycopg2
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
packages = psycopg2_pool
test_suite = tests.py
setup_requires =
    setuptools
install_requires =
    psycopg2-binary

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
    except ImportError

[flake8]
max-line-length = 99
doctests = True
exclude = .git/, .tox/, __pycache__/, docs/, build/, dist/
