# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = psycopg2-pool
version = 1.2
author = Changaco
author-email = changaco@changaco.oy.lc
home-page = https://github.com/Changaco/psycopg2-pool
description = Proper pooling of psycopg2 connections
long-description = file: README.md, CHANGELOG.md
long-description-content-type = text/markdown
license = LGPL3
license-file = LICENSE
platform = any
keywords = postgres psycopg2
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >= 3.3
packages = psycopg2_pool
test_suite = tests.py
setup_requires =
    setuptools

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
    except ImportError

[flake8]
max-line-length = 99
doctests = True
exclude = .git/, .tox/, __pycache__/, docs/, build/, dist/
